Fix visibility modifiers for templates

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,7 +6,7 @@ html,
 body {
   height: 100%;
   margin: 0px;
-  background-color: #5a5353;
+  background-color: #52525212;
 }
 
 .p-15 {
